# api-erp-app

./: .gitignore  LICENSE  README.md  pyproject.toml  zappa_settings.json
accounts/: auth.py  models.py  serializers.py  urls.py
accounts/migrations/: 0001_initial.py  0002_groupe_groupe_permissions_user_groupe.py  0003_alter_user_is_owner.py  0004_rename_user_groupe_user_groups.py
accounts/views/:   signup.py  base.py  signin.py  signup.py  user.py
companies/: models.py  serializers.py  urls.py
companies/migrations/: 0001_initial.py  0002_employee.py  0003_taskstatus_task.py
companies/utils/: exceptions.py  permissions.py
companies/views/: base.py  employees.py  groups.py
core/: settings.py  urls.py
